--- a/frontEnd/css/table.css
+++ b/frontEnd/css/table.css
@@ -1,12 +1,17 @@
 .table-section {
 	display: flex;
 	flex-direction: column;
-	background-color: #cac6c6;
+	/* background-color: #cac6c6; */
 	margin-left: 28%;
 	margin-top: 7.8rem;
 	max-height: 77vh;
 	width: 69%;
 	z-index: -10;
+}
+
+.color-container {
+	background-color: #cac6c6;
+	max-width: 620px;
 }
 
 .col-25 {
@@ -19,7 +24,20 @@
 	width: 50%;
 }
 
+.col-2-container {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	font-size: var(--small-font-size);
+	margin-top: 1rem;
+}
+
+.col-2-field {
+	display: flex;
+	column-gap: 0.7rem;
+}
+
 .table-header {
+	position: relative;
 	background-image: linear-gradient(
 		to Bottom,
 		rgba(0, 0, 0, 0.2),
@@ -31,22 +49,72 @@
 	padding-left: 1rem;
 	font-weight: var(--font-semi-bold);
 	letter-spacing: 0.225rem;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	/* max-width: 620px; */
 }
 
-.department-table {
-	margin: 1rem 1rem 0rem 1rem;
-	border: 1px solid black;
-	border-bottom: 0;
+.table-header i {
+	padding-inline: 0.5rem;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	right: 0;
+
+	font-size: 1.2rem;
+	transition: background-color 0.4s;
+}
+
+.table-header i:hover {
+	background-color: rgb(209, 12, 12);
+}
+
+.info-table-data,
+.table-data {
 	padding: 4px;
 	display: grid;
+	border: 1px solid black;
+	max-width: 600px;
+}
+.info-table-data {
+	margin: 1rem 1rem 1rem 1rem;
+	overflow: hidden;
+}
+
+.table-data {
+	margin: 1rem 1rem 0rem 1rem;
+	border-bottom: 0;
 	overflow: auto;
+}
+
+.two-col {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+}
+
+.header-overflow {
+	margin-block: 2rem 1rem;
+	padding: 4px;
+	padding-top: 1.2rem;
+	display: grid;
+	border: 1px solid grey;
+	position: relative;
+}
+
+.header-overflow-title {
+	position: absolute;
+	top: -0.7rem;
+	left: 0.4rem;
+	z-index: 2;
+	background-color: #cac6c6;
 }
 
 .form-container {
 	padding-block: 1rem;
 }
 
-.code_selector {
+.mb-06 {
 	margin-bottom: 0.6rem;
 }
 
@@ -59,6 +127,11 @@
 	box-shadow: 0.1rem 0.1rem 4px hsla(0, 0%, 10%, 0.7) inset;
 	padding: 0.2rem;
 	font-size: 0.9rem;
+}
+
+textarea {
+	width: 100%;
+	height: 4rem;
 }
 
 .action-container {
@@ -92,17 +165,14 @@
 	margin: 0;
 }
 
-/* .error-info{
-    margin-left: .9rem;
-} */
-.error-info.success{
-    color: green;
+.error-info.success {
+	color: green;
 }
-.error-info.fail{
-    color: red;
+.error-info.fail {
+	color: red;
 }
-.error-info span{
-    font-weight: 700;
+.error-info span {
+	font-weight: 700;
 }
 
 .table-title {
