--- a/frontEnd/css/table.css
+++ b/frontEnd/css/table.css
@@ -6,11 +6,11 @@
 	margin-top: 7.8rem;
 	max-height: 77vh;
 	width: 69%;
-	max-width: 620px;
+	/* max-width: 620px; */
 	z-index: -10;
 	overflow: hidden;
 }
-/* #cac6c6 */
+
 .col-25 {
 	display: inline-block;
 	width: 25%;
